# sige-api

./: .env  .gitignore  Cargo.toml  MEMORIA.md  README.md  SETUP_AUTO_DEPLOY.md  SISTEMA_VERIFICADO.md  api.http  errores en la aplicacion.txt  insert_100_registers.sql  instalar.sh  package.json  pnpm-lock.yaml  seed_persona.sql  settings.json  setup_github_runner.ps1  setup_windows_service_simple.ps1  setup_windows_ssh_simple.ps1  update.sh
.cursor/rules/: tutor.mdc
.github/workflows/: auto-deploy.yml
application/: Cargo.toml
application/src/: api.rs  auth.rs  cli.rs  connection.rs  enums.rs  error.rs  lib.rs  types.rs
application/src/dtos/: auth.rs  lookup.rs  mod.rs  user.rs
application/src/dtos/operations/: inclusion.rs  mod.rs  persona.rs
application/src/dtos/parking/: issuance.rs  weapon.rs
application/src/dtos/personal/: correspondence.rs  country.rs  mod.rs  persona.rs  plate.rs
application/src/dtos/prevention/: commission.rs  lookup.rs  mod.rs  official.rs  part.rs  register.rs  seclusion.rs  transport.rs
application/src/dtos/transport/: issuance.rs  mod.rs  transport.rs
application/src/services/: cache_manager.rs  mod.rs  user.rs
application/src/services/operations/: inclusion.rs  persona.rs
application/src/services/parking/: issuance.rs  weapon.rs
application/src/services/personal/: correspondence.rs  country.rs  mod.rs  persona.rs  plate.rs
application/src/services/prevention/: commission.rs  lookup.rs  mod.rs  official.rs  part.rs  register.rs  seclusion.rs  transport.rs
application/src/services/transport/: issuance.rs
application/src/usecases/prevention/: commission.rs  register.rs
config/: settings.json
domain/: Cargo.toml
domain/src/: error.rs  lib.rs
domain/src/auth/: permissions.rs
domain/src/entities/: arrests.rs  assignance_time.rs  band.rs  base.rs  brand.rs  brigada.rs  brigade.rs  calibre.rs  charge.rs  commission.rs  commission_actual_exit.rs  commission_official.rs  commission_reason.rs  commission_seized_transport.rs  commission_transport.rs  complainants.rs  confiscated_items.rs  correspondence.rs  correspondence_document.rs  country_verification.rs  diligencies.rs  division.rs  document_type.rs  estado.rs  evidence_files.rs  family_relationship.rs  flagrants.rs  hierarchy.rs  inclusion_audit_log.rs  inclusion_records.rs  inclusion_records_accuseds.rs  inclusion_records_personas.rs  init_orders.rs  institution.rs  investigations.rs  investigations_order.rs  involved_objects.rs  issuance.rs  issuance_return.rs  issuance_weapon.rs  (+57 more)
domain/src/repositories/: commission_repository.rs  lookup_repository.rs  mod.rs  official_repository.rs  register_repository.rs  transport_repository.rs  user_repository.rs
domain/src/usecases/: auth.rs  mod.rs
domain/src/usecases/prevention/: register.rs
domain/src/value_objects/: lookup.rs  mod.rs  official.rs
infrastructure/database/: Cargo.toml
infrastructure/database/src/: connection.rs  error.rs  helpers.rs  lib.rs
infrastructure/database/src/repositories/: commission_repository_impl.rs  lookup_repository_impl.rs  mod.rs  official_repository_impl.rs  register_repository_impl.rs  transport_repository_impl.rs  user_repository_impl.rs
infrastructure/web/: Cargo.toml
infrastructure/web/src/: auth.rs  error.rs  lib.rs  middleware.rs  state.rs  tags.rs  types.rs
infrastructure/web/src/controllers/: auth.rs  lookup.rs  mod.rs  user.rs
infrastructure/web/src/controllers/operations/: inclusion.rs  mod.rs
infrastructure/web/src/controllers/parking/: issuance.rs  mod.rs  weapon.rs
infrastructure/web/src/controllers/personal/: country.rs  mod.rs  persona.rs  plate.rs  process.rs
infrastructure/web/src/controllers/prevention/: commission.rs  mod.rs  official.rs  part.rs  register.rs  seclusion.rs  transport.rs
infrastructure/web/src/controllers/transport/: issuance.rs
infrastructure/web/src/routes/: auth.rs  inclusion.rs  lookup.rs  mod.rs  parking.rs  personal.rs  prevention.rs  transport.rs  user.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20250419_000001_create_role_table.rs  m20250419_000002_create_user_table.rs  m20250419_000003_create_permission_table.rs  m20250419_000004_create_role_permissions_table.rs  m20250419_000005_create_organism_table.rs  m20250419_000005_create_organismo_table.rs  m20250419_000006_create_division_table.rs  m20250419_000007_create_register_table.rs  m20250419_000008_create_estado_table.rs  m20250419_000008_create_state_table.rs  m20250419_000009_create_municipality_table.rs  m20250419_000009_create_municipio_table.rs  m20250419_000010_create_brand_table.rs  m20250419_000010_create_marca_table.rs  m20250419_000011_create_modelo_table.rs  m20250419_000011_create_vehicle_model_table.rs  m20250419_000012_create_brigada_table.rs  m20250419_000012_create_brigade_table.rs  m20250419_000013_create_official_table.rs  m20250504_000014_create_transports_table.rs  m20250504_000015_create_commissions_table.rs  m20250523_094807_create_seclusion_table.rs  m20250602_011258_create_part_table.rs  m20250607_152359_create_lookup_tables.rs  m20250611_094810_create_persona_table.rs  m20250612_114832_create_country_tables.rs  m20250615_144231_seed_users.rs  m20250618_113709_create_base_tables.rs  m20250620_000001_seed_persona_example.rs  m20250628_164625_create_plate_table.rs  m20250709_180301_create_correspondence_table.rs  m20250714_213941_create_parking_tables.rs  m20250715_213942_create_transport_tables.rs  m20250803_153156_create_operations_tables.rs  m20260318_154000_add_missing_permissions.rs
requests/: api.http  auth.http  lookup.http  personal.http  prevention.http
server/: Cargo.toml
server/src/: lib.rs
src/: args.rs  commands.rs  lib.rs  main.rs  settings.rs
src/commands/: migrate.rs  mod.rs  start.rs
(+3 files in other folders)
