[package]
name = "sige-api"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.98"
web = { path = "infrastructure/web" }
application = { path = "application" }
migration = { path = "migration" }
config = "0.15.11"
serde = "1.0.219"
tracing = "0.1"
tracing-subscriber = "0.3"
dotenv = "0.15.0"
clap = { workspace = true }

[workspace]
# No defaults members cause any crate can't work itself, all need the cli params to work
members = ["infrastructure/web", "domain", "application", "migration"]

[workspace.dependencies]
clap = { version = "4.5.37", features = ["derive"] }
