[package]
name = "application"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.40", features = ["serde"] }
domain = { path = "../domain" }
password-auth = "1.0.0"
sea-orm = "1.1.10"
serde = "1.0.219"
serde_json = "1.0.140"
thiserror = "2.0.12"
validator = {version = "0.20.0", features = ["derive"]}
futures = "0.3.31"
