[package]
name = "domain"
version = "0.1.0"
edition = "2021"

[dependencies]
sea-orm = { version = "1.1.10", features = [
  "sqlx-postgres",
  "runtime-tokio-rustls",
  "macros",
] }
async-trait = "0.1.88"
tokio = "1.44.2"
thiserror = "2.0.12"
password-auth = "1.0.0"
serde = "1.0.219"
chrono = "0.4.40"
tracing = "0.1.41"
