[package]
name = "web"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.98"
axum = { version = "0.8.3", features = ["macros", "tower-log"] }
application = { path = "../../application" }
domain = { path = "../../domain" }
axum-login = "0.17.0"
sea-orm = "1.1.10"
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = ["rt-multi-thread"] }
serde = "1.0.219"
async-trait = { version = "0.1.88" }
password-auth = "1.0.0"
tracing = "0.1"
tracing-subscriber = "0.3"
tower-http = { version = "0.6.2", features = ["cors"] }
chrono = "0.4.41"
